RG-1211 fixup: raise z-index for dragging node

--- a/components/table/table.css
+++ b/components/table/table.css
@@ -267,6 +267,8 @@
 }
 
 .draggingRow {
+  z-index: var(--ring-overlay-z-index);
+
   background-color: var(--ring-hover-background-color);
 
   & .dragHandle {
